Update of my Vim sheme.

--- a/latex/spydemon_article_theme.tex
+++ b/latex/spydemon_article_theme.tex
@@ -11,6 +11,7 @@
 \usepackage{multicol}															% Possibilité d'utiliser des colonnes.
 \usepackage{titlesec} 															% Modification du style des sections.
 \usepackage{lastpage}															% Pour récupérer le numéro de la derière page pour l'afficher dans le footer.
+\usepackage{MnSymbol,wasysym}													% Pour avoir accès à des carractères cools.
 
 \makeatletter
 
@@ -56,6 +57,6 @@
 	\end{introduction}}
 
 % Mise en place d'une ligne entre les colonnes.
-\setlength\columnseprule{0.4pt} 
+%\setlength\columnseprule{0.2pt} 
 
 \makeatother
