Petites modification de .vimrc Une modif de la conf Awesome (Super + C pour fermer une fenêtre au lieux de Super + Maj + C). Modification de mon thème LaTeX pour les articles.

--- a/latex/spydemon_article_theme.tex
+++ b/latex/spydemon_article_theme.tex
@@ -48,13 +48,13 @@
 
 % Bloc d'introduction.
 \newenvironment*{introduction}{%
-	\begin{center} \begin{minipage}{15cm} \parindent=15pt}{%
-	\end{minipage} \end{center}}
+	\begin{center} \begin{minipage}{15cm} \parindent=15pt}
+	{\end{minipage} \vskip 0.5cm \rule{150pt}{.5pt} \end{center}}
 
 % Bloc de conclusion.
 \newenvironment*{conclusion}{%
-	\vskip 0.5cm \begin{introduction}} {%
-	\end{introduction}}
+	\vskip 0.5cm \begin{center} \begin{minipage}{15cm} \parindent=15pt}
+	{\end{minipage} \end{center}}
 
 % Mise en place d'une ligne entre les colonnes.
 %\setlength\columnseprule{0.2pt} 
