Update of my configuration.

--- a/latex/spydemon_article_theme.tex
+++ b/latex/spydemon_article_theme.tex
@@ -36,6 +36,13 @@
 	\end{center}
 }
 
+\fancyfoot{%
+	{\fbox{%
+		\begin{minipage}{\paperwidth}
+			Bouzza.
+		\end{minipage}}}
+	}
+
 %Définition de variables utiles.
 \def\email#1{\def\@email{#1}}
 \def\footer#1{\def\@footer{#1}}
